--- a/app/src/main/res/layout-land/activity_main.xml
+++ b/app/src/main/res/layout-land/activity_main.xml
@@ -5,6 +5,10 @@
 
     <data>
 
+        <variable
+            name="viewmodelXml"
+            type="com.george.fs_korinthias.MainActivityViewModel" />
+
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -24,13 +28,27 @@
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/bottom_nav_menu" />
 
+
+        <fragment
+            android:id="@+id/nav_host_fragment"
+            android:name="androidx.navigation.fragment.NavHostFragment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="?attr/actionBarSize"
+            app:defaultNavHost="true"
+            app:layout_constraintBottom_toTopOf="@id/nav_view"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:navGraph="@navigation/mobile_navigation" />
+
         <LinearLayout
             android:id="@+id/slidingLayout"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="220dp"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
-            android:layout_marginBottom="56dp"
+            android:layout_marginBottom="?attr/actionBarSize"
             android:background="@drawable/relativelayout_round_corners"
             android:focusable="true"
             android:focusableInTouchMode="true"
@@ -50,7 +68,7 @@
                     android:layout_weight="9"
                     android:gravity="center_horizontal"
                     android:paddingTop="6dp"
-                    android:text="Number of messages"
+                    android:text="@{viewmodelXml.numberMessages.toString() + ` messages`}"
                     android:textAlignment="gravity" />
 
                 <ImageView
@@ -68,14 +86,14 @@
                     android:src="@drawable/ic_close" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/someDummyText"
+            <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/recyclerMainFireBaseMessages"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_margin="4dp"
-                android:layout_weight="6"
-                android:text="@string/dummy_text"
-                android:textColor="#000" />
+                android:layout_weight="2"
+                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+                app:listFireBaseMainMessages="@{viewmodelXml.titleMessages}"
+                tools:listitem="@layout/firebase_main_activity_list_item" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -102,9 +120,9 @@
                         android:id="@+id/editTextSlidingMainActivity"
                         android:layout_width="0dp"
                         android:layout_height="44dp"
+                        android:layout_margin="2dp"
                         android:layout_weight="7"
                         android:autofillHints="no"
-                        android:layout_margin="2dp"
                         android:hint="@string/hint_editTextView_sliding_layout"
                         android:inputType="" />
 
@@ -114,26 +132,13 @@
                         android:layout_height="40dp"
                         android:layout_gravity="center_vertical|center_horizontal"
                         android:layout_weight="1"
-                        android:padding="8dp"
                         android:foreground="?android:attr/selectableItemBackground"
-                        android:src="@drawable/ic_send_green" />
+                        android:padding="8dp"
+                        android:src="@drawable/ic_send_gray" />
                 </LinearLayout>
             </LinearLayout>
 
         </LinearLayout>
-
-        <fragment
-            android:id="@+id/nav_host_fragment"
-            android:name="androidx.navigation.fragment.NavHostFragment"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:defaultNavHost="true"
-            app:layout_constraintBottom_toTopOf="@id/nav_view"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            android:layout_marginBottom="?attr/actionBarSize"
-            app:navGraph="@navigation/mobile_navigation" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab_message"
@@ -141,10 +146,10 @@
             android:layout_height="wrap_content"
             android:layout_gravity="bottom|end"
             android:layout_margin="@dimen/fab_margin"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintBottom_toTopOf="@id/nav_view"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="44dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/nav_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/ic_message" />
 
