--- a/app/src/main/res/layout/firebase_main_activity_list_item.xml
+++ b/app/src/main/res/layout/firebase_main_activity_list_item.xml
@@ -37,14 +37,11 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardBackgroundImage"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:foreground="?android:attr/selectableItemBackground">
+        android:layout_height="wrap_content">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="380dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
             android:paddingLeft="@dimen/list_item_padding_horizontal"
             android:paddingTop="@dimen/list_item_padding_vertical"
             android:paddingRight="@dimen/list_item_padding_horizontal"
@@ -54,48 +51,58 @@
                 android:id="@+id/weather_icon"
                 android:layout_width="@dimen/list_icon"
                 android:layout_height="@dimen/list_icon"
+                android:src="@drawable/ic_chat"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline"
-                android:src="@drawable/ic_chat" />
+                app:layout_constraintTop_toTopOf="@+id/guideline" />
 
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="@dimen/list_item_date_start_margin"
-                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintLeft_toRightOf="@+id/weather_icon"
-                android:text="@{viewmodel.name}"
-                android:textStyle="bold"
-                tools:text="George" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/message"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-                android:textColor="@color/secondary_text"
-                android:text="@{viewmodel.message}"
-                app:layout_constraintLeft_toLeftOf="@+id/name"
-                app:layout_constraintTop_toTopOf="@+id/guideline"
-                tools:text="Hello" />
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/list_item_date_start_margin"
+                    android:text="@{viewmodel.name}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                    android:textSize="14sp"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toTopOf="@+id/guideline"
+                    app:layout_constraintLeft_toRightOf="@+id/weather_icon"
+                    tools:text="g sol" />
 
-            <androidx.constraintlayout.widget.Guideline
+                <TextView
+                    android:id="@+id/message"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="@dimen/list_item_date_start_margin"
+                    android:text="@{viewmodel.message}"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+                    android:textColor="@color/secondary_text"
+                    android:textSize="17sp"
+                    app:layout_constraintLeft_toLeftOf="@+id/name"
+                    app:layout_constraintTop_toTopOf="@+id/guideline"
+                    tools:text="Hello" />
+            </LinearLayout>
+
+
+            <!--<androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                app:layout_constraintGuide_percent="0.5" />
+                app:layout_constraintGuide_percent="0.3" />-->
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </LinearLayout>
 
-        <View
+        <!--<View
             android:layout_width="match_parent"
             android:layout_height="2dp"
             android:background="#ccc"
-            android:layout_gravity="bottom"/>
+            android:layout_gravity="bottom"/>-->
 
     </androidx.cardview.widget.CardView>
 </layout>
