--- a/app/src/main/res/layout/firebase_main_activity_list_item.xml
+++ b/app/src/main/res/layout/firebase_main_activity_list_item.xml
@@ -47,14 +47,24 @@
             android:paddingRight="@dimen/list_item_padding_horizontal"
             android:paddingBottom="@dimen/list_item_padding_vertical">
 
-            <ImageView
-                android:id="@+id/weather_icon"
+            <androidx.cardview.widget.CardView
+                android:id="@+id/view2"
                 android:layout_width="@dimen/list_icon"
                 android:layout_height="@dimen/list_icon"
-                android:src="@drawable/ic_chat"
+                android:elevation="12dp"
+                app:cardCornerRadius="40dp"
                 app:layout_constraintBottom_toTopOf="@+id/guideline"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline" />
+                app:layout_constraintTop_toTopOf="@+id/guideline">
+
+                <ImageView
+                    android:id="@+id/profile_icon"
+                    android:layout_width="@dimen/list_icon"
+                    android:layout_height="@dimen/list_icon"
+                    app:photoFirebaseDisplay="@{viewmodel.photo}" />
+
+            </androidx.cardview.widget.CardView>
+
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -71,7 +81,7 @@
                     android:textSize="14sp"
                     android:textStyle="bold"
                     app:layout_constraintBottom_toTopOf="@+id/guideline"
-                    app:layout_constraintLeft_toRightOf="@+id/weather_icon"
+                    app:layout_constraintLeft_toRightOf="@+id/profile_icon"
                     tools:text="g sol" />
 
                 <TextView
