--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -17,11 +17,10 @@
         android:orderInCategory="100"
         android:title="@string/action_apostoli"
         app:showAsAction="never" />
-
     <item
         android:id="@+id/action_log_out"
         android:orderInCategory="100"
-        android:title="Log out"
+        android:title="@string/log_out"
         app:showAsAction="never" />
 
 </menu>
