--- a/app/src/main/res/layout/firebase_main_activity_list_item.xml
+++ b/app/src/main/res/layout/firebase_main_activity_list_item.xml
@@ -71,18 +71,37 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginStart="@dimen/list_item_date_start_margin"
-                    android:text="@{viewmodel.name}"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textSize="14sp"
-                    android:textStyle="bold"
-                    app:layout_constraintBottom_toTopOf="@+id/guideline"
-                    app:layout_constraintLeft_toRightOf="@+id/profile_icon"
-                    tools:text="g sol" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:id="@+id/name"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/list_item_date_start_margin"
+                        android:text="@{viewmodel.name}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                        android:textSize="14sp"
+                        android:textStyle="bold"
+                        app:layout_constraintBottom_toTopOf="@+id/guideline"
+                        app:layout_constraintLeft_toRightOf="@+id/profile_icon"
+                        tools:text="g sol" />
+
+                    <TextView
+                        android:id="@+id/date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="@dimen/list_item_date_start_margin"
+                        android:text="@{viewmodel.date}"
+                        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
+                        android:textSize="14sp"
+                        app:layout_constraintBottom_toTopOf="@+id/guideline"
+                        app:layout_constraintLeft_toRightOf="@+id/profile_icon"
+                        tools:text="g sol" />
+
+                </LinearLayout>
+
 
                 <TextView
                     android:id="@+id/message"
