--- a/app/src/main/res/layout/firebase_main_activity_list_item.xml
+++ b/app/src/main/res/layout/firebase_main_activity_list_item.xml
@@ -61,6 +61,7 @@
                     android:id="@+id/profile_icon"
                     android:layout_width="@dimen/list_icon"
                     android:layout_height="@dimen/list_icon"
+                    android:layout_gravity="center_vertical|center_horizontal"
                     app:photoFirebaseDisplay="@{viewmodel.photo}" />
 
             </androidx.cardview.widget.CardView>
