--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -45,7 +45,7 @@
         <LinearLayout
             android:id="@+id/slidingLayout"
             android:layout_width="match_parent"
-            android:layout_height="440dp"
+            android:layout_height="500dp"
             android:layout_marginStart="2dp"
             android:layout_marginEnd="2dp"
             android:layout_marginBottom="?attr/actionBarSize"
@@ -67,8 +67,8 @@
                     android:layout_weight="9"
                     android:gravity="center_horizontal"
                     android:paddingTop="6dp"
-                    app:numberMessagesToString="@{viewmodelXml.numberMessages.toString()}"
-                    android:textAlignment="gravity" />
+                    android:textAlignment="gravity"
+                    app:numberMessagesToString="@{viewmodelXml.numberMessages.toString()}" />
 
                 <ImageView
                     android:id="@+id/imageButtonClose"
@@ -93,6 +93,43 @@
                 app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                 app:listFireBaseMainMessages="@{viewmodelXml.titleMessages}"
                 tools:listitem="@layout/firebase_main_activity_list_item" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/firstCommentTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:padding="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/textview_black_border"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/secondCommentTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="4dp"
+                    android:padding="8dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/textview_black_border"
+                    android:text="Second"
+                    android:textAlignment="center" />
+
+                <TextView
+                    android:id="@+id/thirdCommentTextView"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:padding="8dp"
+                    android:layout_margin="4dp"
+                    android:layout_weight="1"
+                    android:background="@drawable/textview_black_border"
+                    android:text="Third"
+                    android:textAlignment="center" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -145,10 +182,10 @@
             android:layout_margin="@dimen/fab_margin"
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="44dp"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintBottom_toTopOf="@id/nav_view"
             app:layout_constraintEnd_toEndOf="parent"
-            android:visibility="gone"
             app:srcCompat="@drawable/ic_message" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
