--- a/app/src/main/res/layout/firebase_main_activity_list_item.xml
+++ b/app/src/main/res/layout/firebase_main_activity_list_item.xml
@@ -47,24 +47,12 @@
             android:paddingRight="@dimen/list_item_padding_horizontal"
             android:paddingBottom="@dimen/list_item_padding_vertical">
 
-            <androidx.cardview.widget.CardView
-                android:id="@+id/view2"
+            <de.hdodenhof.circleimageview.CircleImageView
+                android:id="@+id/profile_icon"
                 android:layout_width="@dimen/list_icon"
                 android:layout_height="@dimen/list_icon"
-                android:elevation="12dp"
-                app:cardCornerRadius="40dp"
-                app:layout_constraintBottom_toTopOf="@+id/guideline"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/guideline">
-
-                <ImageView
-                    android:id="@+id/profile_icon"
-                    android:layout_width="@dimen/list_icon"
-                    android:layout_height="@dimen/list_icon"
-                    android:layout_gravity="center_vertical|center_horizontal"
-                    app:photoFirebaseDisplay="@{viewmodel.photo}" />
-
-            </androidx.cardview.widget.CardView>
+                android:layout_gravity="center_horizontal"
+                app:photoFirebaseDisplay="@{viewmodel.photo}" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -108,11 +96,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/list_item_date_start_margin"
+                    android:autoLink="all"
                     android:text="@{viewmodel.message}"
                     android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                     android:textColor="@color/secondary_text"
                     android:textSize="17sp"
-                    android:autoLink="all"
                     app:layout_constraintLeft_toLeftOf="@+id/name"
                     app:layout_constraintTop_toTopOf="@+id/guideline"
                     tools:text="Hello" />
